# finspresso

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ema.py  setup.py
bialetti/drawings/: PCBA_interface.FCStd  servo_interface.FCStd  servo_support.FCStd  servo_support_only.FCStd  servo_support_only_new.FCStd  servo_support_rework.FCStd  shaft.scad  stepper_inteface.scad  stepper_support.FCStd  stepper_support.scad  stepper_support_2.FCStd
bialetti/rpi_pico/: coffee.py  led.py  thermistor.py  web_server.py
bialetti/rpi_pico/firmware/coffee_control/: CMakeLists.txt  coffee_control.c
bialetti/rpi_pico/firmware/hello_world/: CMakeLists.txt  hello_world.c
bialetti/rpi_pico/firmware/led_flashing/: CMakeLists.txt  led_flashing.c
bialetti/rpi_pico/firmware/pontentiometer/: CMakeLists.txt  pontentiometer.c
bialetti/rpi_pico/firmware/temp_sensor/: CMakeLists.txt  temp_sensor.c
container/: Apache_PHP.Dockerfile  Dockerfile_Apache  docker-compose.yml  dump.sql  entrypoint_supermarket.sh  index_container.html  my.cnf  supermarket_tracker.Dockerfile  webui.py
db_interface_package/: setup.py
db_interface_package/db_interface/: db_interface.py
inflation/: .gitignore  Makefile  README.md  db_interface.py  en.qm  inflation_tracker.py  logging_config.json  requirements.txt  sql_credentials_test.json  translation_helper.py  update_lik.sh
inflation/html/: lik.html  lik_finspresso.html
inflation/lik_json_files/: pie_chart_color.json
inflation/mysql_dummy/: README.md  dummy.html  dummy_lik.html  dummy_lik_chartjs.html  getcustomer.php  getlikcategory.php  getlikdata.php  getlikdata_dummy.php  lik_chartjs.html  lik_evolution.html
portfolio_math/: portfolio_math.py
portfolio_tracker/: .gitignore  README.md  holdings.json  holdings_old.json  holdings_single.json  portfolio_tracker.py  requirements.txt
quant/: .gitignore  README.md  dividend_analyzer.py  sp_500_tickers.json
supermarket_tracker/: .dockerignore  .gitignore  Makefile  README.md  index_supermarket.html  requirements.txt  supermarket_tracker.py  supermarket_webui.py  transfer_mysql_db.sh  update_all.sh  update_mbudget.sh
tax/: README.md  create_json_file.py  graphjs_from_json_example.html  requirements.txt  sample_dataset.json  select_dropdown.html  steuerfuss.json  withholding.html  withholding.py  withholding_data.json  withholding_finspresso.html
(+256 files in other folders)
